--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>TableStreamUI</title>
+  <title>Table Stream - Play Card Games Online with Real Cards</title>
+  <meta name="description" content="Play Magic: The Gathering, Pokémon, Yu-Gi-Oh!, and more online with real cards on Table Stream. No account needed.">
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
